crates/symbolicator/src/endpoints/snapshots/symbolicator__endpoints__symbolicate__tests__no_dif_candidates.snap
---
source: crates/symbolicator/src/endpoints/symbolicate.rs
expression: response
---
stacktraces:
  - registers:
      eip: "0x1509530"
    frames:
      - status: symbolicated
        original_index: 0
        instruction_addr: "0x749e8630"
        package: "C:\\Windows\\System32\\kernel32.dll"
        symbol: BaseThreadInitThunk
        sym_addr: "0x749e8630"
        function: BaseThreadInitThunk
        lineno: 0
modules:
  - debug_status: found
    features:
      has_debug_info: true
      has_unwind_info: true
      has_symbols: true
      has_sources: false
    arch: x86
    type: pe
    code_file: "C:\\Windows\\System32\\kernel32.dll"
    debug_id: ff9f9f78-41db-88f0-cded-a9e1e9bff3b5-1
    debug_file: "C:\\Windows\\System32\\wkernel32.pdb"
    image_addr: "0x749d0000"
    image_size: 851968

